--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
 /target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
+/target/
