--- a/pom.xml
+++ b/pom.xml
@@ -26,12 +26,12 @@
     <artifactId>poi-ooxml</artifactId>
     <version>3.12</version>
 </dependency>
-    <dependency>
+   <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
-        <artifactId>selenium-java</artifactId>
-        <version>2.48.2</version>
+        <artifactId>selenium-firefox-driver</artifactId>
+        <version>3.0.1</version>
     </dependency>  
-   
+
    <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
         <artifactId>selenium-server</artifactId>
